@startuml

skinparam linetype ortho
skinparam nodesep 230
skinparam ranksep 100

!startsub TESTRUN
class TestRun {
    + get_test_description() : TestDescription
    + get_action_list() : Action[]
    + get_runtime_info() : RuntimeInformation
}

abstract class Action {
    - timestep : int
    - entity : Entity
    - start_position : Optional<Position>
    - end_position : Optional<Position>
    - description : str

    + Action(timestep: int, entity : Entity, startPosition : Position,
    endPosition : Position, description : str)
    + get_timestep() : int
    + get_entity() : Entity
    + get_startPosition() : Optional<Position>
    + get_end_position() : Optional<Position>
    + get_description() : str
}

Action <|-- Move
Action <|-- Disappear
Action <|-- Appear
Action <|-- Wait

TestRun --* "*" Action : - action_list : Action[]
TestRun -r-> RuntimeInformation : - runtime_info
TestRun -l-> TestDescription : - test_description : TestDescription

class RuntimeInformation {
    // To be defined later
}
!endsub

@enduml